--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -198,16 +198,17 @@
   z-index: 9999;
   max-width: 600px;
   margin: 0 auto;
-  background: rgba(0, 0, 0, 0.9);
-  color: white;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(12px);
+  color: #111;
   padding: 1rem;
   font-size: 0.95rem;
   text-align: center;
-  box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.2);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  backdrop-filter: blur(6px);
 }
+
 
 #mobile-banner button#toggle-banner {
   background: none;
