--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -266,3 +266,13 @@
     display: block;
   }
 }
+
+#mobile-banner-details.full {
+  max-height: 100vh !important;
+  transition: max-height 0.6s ease;
+}
+
+.locked {
+  opacity: 0.6;
+  pointer-events: none;
+}
