--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -252,18 +252,11 @@
 #mobile-banner-details {
   overflow: hidden;
   max-height: 0;
-  opacity: 0;
-  transform: translateY(-10px);
-  transition:
-    max-height 0.6s ease,
-    opacity 0.4s ease,
-    transform 0.4s ease;
+  transition: max-height 0.6s ease;
 }
 
 #mobile-banner-details.open {
   max-height: 500px;
-  opacity: 1;
-  transform: translateY(0);
 }
 
 /* ✅ Boutons */
