--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -483,6 +483,15 @@ h1 {
   line-height: 1.2;
 }
 
+/* Correction pour l'avertissement Lighthouse : s'assurer que tous les h1 dans des éléments de sectioning ont une taille de police définie */
+section h1,
+article h1,
+aside h1,
+nav h1 {
+  font-size: 3rem;
+  line-height: 1.2;
+}
+
 h1.major {
   margin: 0 0 2.625rem 0;
 }
@@ -596,6 +605,15 @@ hr {
   }
 
   h1 {
+    font-size: 2.25rem;
+    line-height: 1.2;
+  }
+
+  /* Correction pour l'avertissement Lighthouse : media query pour les h1 dans des éléments de sectioning */
+  section h1,
+  article h1,
+  aside h1,
+  nav h1 {
     font-size: 2.25rem;
     line-height: 1.2;
   }
